# ridl

./: .gitignore  Cargo.toml  LICENSE  README.md
example/rust-idl/: Cargo.toml  README.md  pyproject.toml
example/rust-idl/src/: lib.rs
example/rust-idl/src/api/: hello.rs
example/webclient/: package-lock.json  package.json
example/webclient/src/routes/: +page.svelte
example/webserver/: README.md  pyproject.toml
example/webserver/app/: main.py
ridl/: Cargo.toml
ridl-derive/: Cargo.toml
ridl-derive/src/: lib.rs  py.rs  wasm.rs
ridl-impl/: Cargo.toml
ridl-impl/src/: lib.rs  py.rs
ridl/src/: lib.rs  py.rs
ridl/tests/: test_pojso.rs  test_popo.rs
