[package]
name = "ridl-derive"
version = "0.0.1"
edition = "2021"

[lib]
name = "ridl_derive"
proc-macro = true

[dependencies]
pyo3 = { version = "0.23.4", features = ["abi3-py38"], optional = true }
derive = "1.0.0"
quote = "1.0.38"
serde = { version = "1.0.217", features = ["derive"] }
syn = "2.0.98"
proc-macro2 = "1.0.93"
ridl-impl = { path = "../ridl-impl" }
inventory = "0.3.19"
wasm-bindgen = { version = "0.2.100", optional = true }
serde_json = { version = "1.0.138", optional = true }
rmp-serde = { version = "1.3.0", optional = true }

[features]
py = ["dep:pyo3", "ridl-impl/py"]
wasm = ["dep:wasm-bindgen"]
json = ["dep:serde_json"]
msgpack = ["dep:rmp-serde"]
