[package]
name = "ridl-proto"
version = "0.0.1"
edition = "2021"

[dependencies]
inventory = "0.3.19"
pyo3 = { version = "0.23.4", features = [
    "abi3-py38",
    "serde",
], optional = true }
ridl-derive = { path = "../ridl-derive", version = "0.0.1" }
ridl-impl = { path = "../ridl-impl", version = "0.0.1" }
wasm-bindgen = { version = "0.2.100", optional = true }

[features]
py = ["dep:pyo3", "ridl-derive/py", "ridl-impl/py"]
wasm = ["dep:wasm-bindgen", "ridl-derive/wasm"]
json = ["ridl-derive/json"]
msgpack = ["ridl-derive/msgpack"]

[dev-dependencies]
rmp-serde = "1.3.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
