[package]
name = "rust-idl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rust_idl"
crate-type = ["cdylib"]

[dependencies]
ridl = { path = "../../ridl" }
pyo3 = { version = "0.23.3", optional = true, features = ["abi3-py38"] }
serde = { version = "1.0.217", features = ["derive"] }
wasm-bindgen = { version = "0.2.100", optional = true }
inventory = "0.3.19"
serde_json = "1.0.138"
rmp-serde = "1.3.0"

[features]
py = ["ridl/py", "pyo3/extension-module", "dep:pyo3"]
wasm = ["ridl/wasm", "dep:wasm-bindgen"]

json = ["ridl/json"]
msgpack = ["ridl/msgpack"]
